; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/sound/isa/extr_sbc.c_sb_setmixer.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/sound/isa/extr_sbc.c_sb_setmixer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.resource = type { i32 }

@SB_MIX_ADDR = common dso_local global i32 0, align 4
@SB_MIX_DATA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.resource*, i32, i32)* @sb_setmixer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sb_setmixer(%struct.resource* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.resource*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.resource* %0, %struct.resource** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = call i32 (...) @spltty()
  store i32 %8, i32* %7, align 4
  %9 = load %struct.resource*, %struct.resource** %4, align 8
  %10 = load i32, i32* @SB_MIX_ADDR, align 4
  %11 = load i32, i32* %5, align 4
  %12 = and i32 %11, 255
  %13 = call i32 @sb_wr(%struct.resource* %9, i32 %10, i32 %12)
  %14 = call i32 @DELAY(i32 10)
  %15 = load %struct.resource*, %struct.resource** %4, align 8
  %16 = load i32, i32* @SB_MIX_DATA, align 4
  %17 = load i32, i32* %6, align 4
  %18 = and i32 %17, 255
  %19 = call i32 @sb_wr(%struct.resource* %15, i32 %16, i32 %18)
  %20 = call i32 @DELAY(i32 10)
  %21 = load i32, i32* %7, align 4
  %22 = call i32 @splx(i32 %21)
  ret void
}

declare dso_local i32 @spltty(...) #1

declare dso_local i32 @sb_wr(%struct.resource*, i32, i32) #1

declare dso_local i32 @DELAY(i32) #1

declare dso_local i32 @splx(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
